# weekly-ai-learning-lab

./: .env.example  .gitignore  README.md
Week 1 A - Connecting to an LLM/: README.md
Week 1 A - Connecting to an LLM/01 - Calling an LLM API/: .env.example  README.md  main.py  pyproject.toml
Week 1 A - Connecting to an LLM/02 - Website Scraper and Summarizer/: .env.example  README.md  pyproject.toml
Week 1 A - Connecting to an LLM/03 - LLM Arena Battle/: .env.example  README.md  pyproject.toml
Week 1 B - Exploring LangChain and Memory/: README.md
Week 1 B - Exploring LangChain and Memory/01 - Website Summarizer with LangChain/: README.md  pyproject.toml
Week 1 B - Exploring LangChain and Memory/02 - Chatbot with Memory/: README.md  pyproject.toml
Week 1 B - Exploring LangChain and Memory/03 - Tool-Using Shop Assistant/: .env.example  README.md  pyproject.toml
Week 2 A - LangChain Models, Structured Output, and Agents/: README.md
Week 2 A - LangChain Models, Structured Output, and Agents/01 - Calling Models with LangChain/: README.md  _1_gemini_and_groq.py  _2_init_chat_model.py  _3_model_with_a_tool.py  _4_model_with_structured_messages.py  pyproject.toml
Week 2 A - LangChain Models, Structured Output, and Agents/02 - Structured Outputs/: README.md  _1_pydantic_output.py  (+2 more)
Week 2 B - Getting Started with RAG Concepts/: README.md
Week 2 B - Getting Started with RAG Concepts/02 - Basic RAG with Chroma/: .env.example  .gitignore  README.md  _1_documents.py  _2_vector_store.py  _3_index.py  _4_inspect_retrieval.py  _5_rag.py  _6_rerank.py  pyproject.toml
(+18 files in other folders)
