[project]
name = "02-basic-rag-with-chroma"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
